adding gateway redirect and client id to login
